fix: enhance text styling by adding underline and center alignment to main and subtitle sections

--- a/src/styles/globals/style.css
+++ b/src/styles/globals/style.css
@@ -113,12 +113,15 @@ main {
     font-family: 'Lato', serif;
     font-size: var(--title-section-size);
     font-weight: bold;
+    text-align: center;
+    text-decoration: underline;
 }
 
 .subtitle-section {
     font-family: 'Lato', serif;
     font-size: var(--subtitle-section-size);
     font-weight: bold;
+    text-decoration: underline dotted;
 }
 
 .p-img {
